Palladium-JazzHR/src/objects/JazzHR_User__c.object
<CustomObject>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JazzHr_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>JazzHr User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JazzHR User</label>
    <listViews>
        <fullName>Active_JazzHR_Users</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Email__c</columns>
        <columns>Date_Created__c</columns>
        <columns>JazzHr_User_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Deleted,Deactivated</value>
        </filters>
        <label>Active JazzHR Users</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Email__c</columns>
        <columns>Date_Created__c</columns>
        <columns>JazzHr_User_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JU-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JazzHR Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>